# PaperlessClone

./: .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  nginx.conf
.github/workflows/: ci-cd.yml
batch/: Dockerfile  pom.xml  spotbugs-exclude.xml
batch/src/main/java/at/technikum/Batch_Processor/: AccessEntryXml.java  AccessLogImportService.java  AccessLogXml.java  BatchProcessorApplication.java  DocumentDailyAccess.java  DocumentDailyAccessRepository.java  XmlMapperConfig.java
batch/src/main/resources/: application.yaml
batch/src/main/resources/xsd/: access-log.xsd
batch/src/test/java/at/technikum/Batch_Processor/: AccessLogImportServiceIT.java  AccessLogImportServiceTest.java  BatchProcessorApplicationTests.java
batch/src/test/resources/: application.yaml
batch/src/test/resources/xml/: invalid-access-log.xml  valid-access-log-2.xml  valid-access-log.xml
ocr-worker/: Dockerfile  main.py  pyproject.toml  requirements.txt
ocr-worker/src/: __init__.py  config.py  genAI_service.py  main.py  message_handler.py  minio_client.py  models.py  ocr_service.py  rabbitmq_client.py
rest-api/: Dockerfile  checkstyle.xml  pom.xml  spotbugs-exclude.xml
rest-api/src/main/java/at/technikum/restapi/: Document_Controller.java  Document_Entity.java  Document_Repository.java  HelloController.java  RestApiApplication.java  WebConfig.java
rest-api/src/main/java/at/technikum/restapi/config/: MinIOConfig.java  RabbitConfig.java
rest-api/src/main/java/at/technikum/restapi/controller/: CategoryController.java  DocumentController.java  DocumentNoteController.java
rest-api/src/main/java/at/technikum/restapi/controllers/: DocumentController.java  Document_Controller.java
rest-api/src/main/java/at/technikum/restapi/miniIO/: MinIOConfig.java  MinioService.java
rest-api/src/main/java/at/technikum/restapi/persistence/: Document.java  DocumentEntity.java  DocumentNote.java  DocumentNoteRepository.java  DocumentRepository.java  Document_Entity.java  Document_Repository.java  SearchDocument.java  SearchDocumentRepository.java
rest-api/src/main/java/at/technikum/restapi/persistence/model/: Category.java  Document.java  DocumentNote.java  SearchDocument.java
rest-api/src/main/java/at/technikum/restapi/persistence/repository/: CategoryRepository.java  DocumentNoteRepository.java  DocumentRepository.java  SearchDocumentRepository.java
rest-api/src/main/java/at/technikum/restapi/rabbitMQ/: DocumentListener.java  DocumentListenerImpl.java  DocumentPublisher.java  DocumentPublisherImpl.java  DocumentResponseListener.java  RabbitConfig.java
rest-api/src/main/java/at/technikum/restapi/service/: CategoryService.java  CategoryServiceImpl.java  DocumentDto.java  DocumentNoteService.java  DocumentSearchIndexService.java  DocumentSearchService.java  DocumentSearchServiceImpl.java  DocumentService.java  DocumentServiceImpl.java  MinioService.java  MinioServiceImpl.java  OcrResponseDto.java
rest-api/src/main/java/at/technikum/restapi/service/dto/: CategoryDto.java  DocumentDetailDto.java  DocumentNoteDto.java  DocumentSummaryDto.java  GenAIRequestDto.java  GenAIResponseDto.java  OcrRequestDto.java  OcrResponseDto.java  OcrStatusDto.java  WorkerStatusDto.java
rest-api/src/main/java/at/technikum/restapi/service/exception/: CategoryAlreadyExistsException.java  CategoryNotFoundException.java  CategoryValidationException.java  DocumentNotFoundException.java  DocumentProcessingException.java  DocumentUploadException.java  GlobalExceptionHandler.java  InvalidDocumentException.java
rest-api/src/main/java/at/technikum/restapi/service/exceptions/: DocumentNotFoundException.java  DocumentProcessingException.java  GlobalExceptionHandler.java  InvalidDocumentException.java
rest-api/src/main/java/at/technikum/restapi/service/mapper/: CategoryMapper.java  DocumentMapper.java  Mapper.java
rest-api/src/main/resources/: application.yml
rest-api/src/test/java/at/technikum/restapi/: RestApiApplicationTests.java
rest-api/src/test/java/at/technikum/restapi/controller/: DocumentControllerTest.java
rest-api/src/test/java/at/technikum/restapi/service/: DocumentSearchServiceTest.java  DocumentServiceTest.java  ElasticSearchIntegrationTest.java  MinioServiceIntegrationTest.java
rest-api/src/test/java/at/technikum/restapi/service/mapper/: DocumentMapperTest.java
webui/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
webui/src/: App.css  App.tsx  index.css  main.tsx
webui/src/components/: Categories.tsx  DeleteModal.test.tsx  DeleteModal.tsx  DocumentCard.test.tsx  DocumentCard.tsx  DocumentDetails.tsx  DocumentForm.tsx  DocumentList.test.tsx  DocumentList.tsx  SearchBar.test.tsx  SearchBar.tsx  StartPage.tsx
webui/src/lib/: categoryService.ts  documentService.test.ts  documentService.ts  iconConstants.ts  iconMapping.tsx  try-catch.ts  types.ts  utils.test.ts  utils.ts
webui/src/test/: setup.ts  test-utils.tsx  vitest.d.ts
workers/genai-worker/: .coverage  Dockerfile  pyproject.toml  pyrightconfig.json
workers/genai-worker/src/: __init__.py  config.py  genAI_service.py  main.py  message_handler.py  models.py
workers/genai-worker/tests/: __init__.py  test_genai_message_handler.py  test_genai_service.py
workers/ocr-worker/: .coverage  Dockerfile  pyproject.toml
workers/ocr-worker/src/: __init__.py  config.py  main.py  message_handler.py  models.py  ocr_service.py
workers/ocr-worker/tests/: __init__.py  test_ocr_message_handler.py  test_ocr_service.py
workers/shared/: pyproject.toml
workers/shared/paperless_shared/: __init__.py  abstract_handler.py  config.py  minio_client.py  models.py  rabbitmq_client.py
workers/shared/tests/: __init__.py  test_config.py  test_imports.py  test_minio_client.py  test_rabbitmq_client.py
(+9 files in other folders)
