[project]
name = "ocr-worker"
version = "0.1.0"
description = "OCR worker service for PaperlessClone"
requires-python = ">=3.11"
dependencies = [
    "paperless-shared",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.6",
]

# For local development only (Docker installs shared package directly)
[tool.uv.sources]
paperless-shared = { path = "../shared", editable = true }

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["../shared"]
pythonVersion = "3.11"
